2006-05-22  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_FamilyView.py: start shading of data

2006-05-22  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py: Multiple improvements.
	* various: Replace get/set_base_handle with get/set_reference_handle.
	* src/RelLib/_SourceRef.py (get_base_handle,set_base_handle):
	Remove redundant methods.
	* src/ArgHandler.py (need_gui): Add method.
	* src/ViewManager.py: Move statusbar notification from gramps_main.
	* src/gramps_main.py: Remove unused methods, handle ArgHandler better.

2006-05-21  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: handle export, import, and save as if
	database does not exist, yet UIManager still wants to call them.

2006-05-21  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Set up for the next release.

2006-05-21  Don Allingham  <don@gramps-project.org>
	* src/GrampsWidgets.py (MonitoredEntry.set_text): added function

2006-05-21  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py: Repository export.
	* src/GrampsDb/_GrampsInMemDB.py (GrampsInMemDB.__init__): Remove
	unused variables.
	* src/plugins/Calendar.py (print_page): Use correct variable.

2006-05-21  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py.in: fix file open.
	* src/plugins/Calendar.py: make calendar work in Windows
	* src/GrampsLocale.py: make calendar work in Windows
	* src/plugins/GraphViz.py: fix unicode encoding
	* src/plugins/TimeLine.py: round all dates to nearest decade

2006-05-21  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: Do not import unused module.
	* src/const.py.in: Use gettext.
	* src/GrampsDb/_ConstXML.py: Remove file.
	* src/DisplayTabs/_PersonEventEmbedList.py
	(PersonEventEmbedList.default_type): properly process event list.
	* src/Editors/_EditEventRef.py (EditEventRef.get_custom_events):
	Use correct method.
	* src/Editors/_EditEvent.py (EditEvent.get_custom_events)